--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        kotlinVersion = '1.2.41'
+        kotlinVersion = '1.2.51'
         springBootVersion = '2.1.0.BUILD-SNAPSHOT'
     }
     repositories {
@@ -17,7 +17,6 @@ buildscript {
 
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring' // makes all Spring classes "open"
-// apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management' // like Maven BOM
 
@@ -45,6 +44,8 @@ repositories {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-rest')
+    compile('org.springframework.boot:spring-boot-starter-actuator')
+    compileOnly("org.springframework.boot:spring-boot-devtools")
     compile('com.fasterxml.jackson.module:jackson-module-kotlin')
     compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     compile("org.jetbrains.kotlin:kotlin-reflect")
@@ -54,5 +55,4 @@ dependencies {
     compile("io.springfox:springfox-swagger-ui:2.7.0")
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
-    testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
 }
