--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jmx.enabled=false
 management.endpoints.enabled-by-default=false
 management.endpoint.health.enabled=true
 
+# Logging
+logging.level.org.springframework.boot.autoconfigure=DEBUG
